syntax = "proto3";

package chatdemo;

service ChatDemoService {
  // 動作確認用RPC
  rpc SayHello (HelloRequest) returns (HelloResponse);
  // しりとりチャット用RPC
  rpc WordChainChat (stream WordChain) returns (stream WordChain);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message WordChain {
  string word = 1;
  Result result = 2;
  string message = 3;
}

enum Result {
  RESULT_UNSPECIFIED = 0;
  RESULT_WIN = 1;
  RESULT_LOSE = 2;
}
